# kris-routing

./: Makefile  README.md  docker-compose.yml  postgres.conf  scripts.sh
.github/workflows/: build_kris.yml
backend/: app.py  pyproject.toml
backend/app/: main.py  utils.py
backend/app/frontend/static/: index.js  style.css
backend/app/frontend/template/: index.html
backend/tests/: test_app.py
scripts/: .dockerignore  Dockerfile  docker-compose.yml  kris.service  query.sql  scripts.sh
